farstream-0.2 (0.1.91-1) UNRELEASED; urgency=low

  * New upstream release 0.1.91

 -- Sjoerd Simons <sjoerd@debian.org>  Fri, 21 Sep 2012 21:50:46 +0200

farstream (0.1.2-1) unstable; urgency=low

  * New upstream release
    - Bump libglib2.0-dev build-dependency to 2.30
  * debian/gir1.2-farstream-0.1.install: .typelib file must not be installed
    in the multiarch path, gobject-introspection is not supporting that

 -- Laurent Bigonville <bigon@debian.org>  Sun, 08 Apr 2012 01:23:11 +0200

farstream (0.1.1-1) unstable; urgency=low

  * Initial upload of farstream
  * Packaging changed from farsight2 to farstream
  * Sync from preliminary Ubuntu packaging (thanks to Ken VanDine)
  * Update for multi-arch

 -- Sjoerd Simons <sjoerd@debian.org>  Thu, 08 Mar 2012 11:25:49 +0100

farsight2 (0.0.31-1) unstable; urgency=low

  * New upstream release

 -- Sjoerd Simons <sjoerd@debian.org>  Wed, 12 Oct 2011 17:40:45 +0100

farsight2 (0.0.30-1) unstable; urgency=low

  * New upstream release

 -- Sjoerd Simons <sjoerd@debian.org>  Fri, 16 Sep 2011 20:10:50 +0100

farsight2 (0.0.29-1) unstable; urgency=low

  * New upstream release.
  * debian/libgstfarsight0.10-0.symbols: Updated for new release.

 -- Jonny Lamb <jonny@debian.org>  Mon, 25 Jul 2011 15:59:56 +0100

farsight2 (0.0.28-1) unstable; urgency=low

  [ Laurent Bigonville ]
  * Use dh_python2 instead of python-central (Closes: #616804)
  * debian/control:
    - Bump cdbs build-dependency to (>= 0.4.90~)
    - Drop Build-dependency against python-central
    - Add Build-dependency against python-all-dev
    - Drop XB-Python-Version
    - Make python-farsight Provides ${python:Provides}
  * debian/rules:
    - Use python-autotools.mk instead of autotools.mk
    - Drop explicit call to dh_pycentral

  [ Sjoerd Simons ]
  * New upstream release
  * Bump build-deps on gst and gst-p-b to >= 0.10.33

 -- Sjoerd Simons <sjoerd@debian.org>  Sat, 14 May 2011 14:30:34 +0100

farsight2 (0.0.26-1) unstable; urgency=low
