@@ -1,2 +1,0 @@
-debian/tmp/usr/share/gtk-doc/html/farstream-libs-0.10
-debian/tmp/usr/share/gtk-doc/html/farstream-plugins-0.1
