@@ -1,0 +1,4 @@
+usr/lib/*/lib*.so.*
+usr/lib/*/farstream-0.2/*.so
+usr/share/farstream/0.2
+usr/lib/*/gstreamer-1.0/*.so
