@@ -1,5 +1,4 @@
 usr/include/*
-usr/lib/*/lib*.a
 usr/lib/*/lib*.so
 usr/lib/*/pkgconfig/*
 usr/share/gir-1.0
