@@ -1,0 +1,2 @@
+debian/tmp/usr/share/gtk-doc/html/farstream-libs-1.0
+debian/tmp/usr/share/gtk-doc/html/farstream-plugins-0.2
