@@ -1,8 +1,9 @@
 farstream-0.2 (0.1.91-1) UNRELEASED; urgency=low
 
-  * New upstream release 0.1.91
+  * New upstream release against gstreamer 1.0, parallel installable with
+    the gstreamer 0.10 version of farstream
 
- -- Sjoerd Simons <sjoerd@debian.org>  Fri, 21 Sep 2012 21:50:46 +0200
+ -- Sjoerd Simons <sjoerd@debian.org>  Fri, 21 Sep 2012 21:36:31 +0200
 
 farstream (0.1.2-1) unstable; urgency=low
 
